Oppdaterte statuser: FORSLAG,INNVILGET,AVSLÅTT,DEAKTIVERT
