# app/src/main/kotlin/no/nav/omsorgsdager/vedtak/dto/VedtakNøkkelinformasjon.kt
@@ -1,14 +1,14 @@
 package no.nav.omsorgsdager.vedtak.dto
 
 import no.nav.omsorgsdager.aksjonspunkt.Aksjonspunkter
-import no.nav.omsorgsdager.aksjonspunkt.kanFastsettes
+import no.nav.omsorgsdager.aksjonspunkt.kanInnvilges
 import no.nav.omsorgsdager.vedtak.Vedtak
 import no.nav.omsorgsdager.vedtak.VedtakStatus
 
 internal object VedtakNøkkelinformasjon {
     internal data class Response private constructor(
         val status: VedtakStatus,
-        val potensielleStatuser: Set<VedtakStatus>,
+        val potensielleStatuser: Map<String, Any>,
         val uløsteAksjonspunkter: Map<String, Any>) {
         internal constructor(
             vedtak: Vedtak,
@@ -16,13 +16,13 @@ internal object VedtakNøkkelinformasjon {
             status = vedtak.status,
             potensielleStatuser = when (vedtak.status) {
                 VedtakStatus.FORSLAG -> when {
-                    aksjonspunkter.løsteAksjonspunkter.kanFastsettes() -> setOf(
-                        VedtakStatus.FASTSATT, VedtakStatus.DEAKTIVERT
+                    aksjonspunkter.løsteAksjonspunkter.kanInnvilges() -> setOf(
+                        VedtakStatus.INNVILGET, VedtakStatus.AVSLÅTT, VedtakStatus.DEAKTIVERT
                     )
-                    else -> setOf(VedtakStatus.DEAKTIVERT)
+                    else -> setOf(VedtakStatus.AVSLÅTT, VedtakStatus.DEAKTIVERT)
                 }
                 else -> emptySet()
-            },
+            }.associateBy { it.name }.mapValues { Any() },
             uløsteAksjonspunkter = aksjonspunkter.uløsteAksjonspunkter.associateBy { it.navn }.mapValues { Any() }
         )
     }
